[fix] chrome don't do gap lol

--- a/css/post.scss
+++ b/css/post.scss
@@ -67,10 +67,14 @@ article {
 
   .images {
     margin-top: 10px;
-    padding: 10px 10px 10px 10px;
+    padding: 5px;
     display: flex;
-    gap: 10px;
     border: 1px solid #cecece;
+    
+    .img {
+      padding: 5px;
+      flex: 33.33%;
+    }
   }
 }
 
